--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Kikkers & Eekhoorn</h1>
+    <h1>pino en big bird are not the same conspiracy website</h1>
 <p>blluhbluhblihblhuvlhu<p>
 kjhfdfujihgfcvoihgfchj
 <img src="https://res.cloudinary.com/natuurmonumenten/image/upload/v1661404992/foto_wedstrijd/16614049904D9A2769.jpg" alt="">
